# waveadapter

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  LICENSE.txt  README.md
.github/workflows/: ci_test.yml  publish.yml
examples/: read_float.rs  read_list.rs  read_raw.rs  write_float.rs  write_raw.rs
src/: dispatch.rs  error.rs  format.rs  header.rs  highlevel.rs  lib.rs  metadata.rs  reader.rs  writer.rs
tests/: roundtrip.rs  wav_variants.rs
tests/utils/: generate_wav_variants.py
